punto 22 y eliminacion del boton ver todos terminado

--- a/public/css/index.css
+++ b/public/css/index.css
@@ -19,7 +19,7 @@
 
 html, body {
 	height: 100% !important;
-	background: radial-gradient(white, #e4e4e4);
+	background: radial-gradient(white, #c4c4c4);
 	font-family: "Open Sans" !important;
 	font-size: .95em;
 	/*margin: 0;*/
