--- a/public/css/toastr.css
+++ b/public/css/toastr.css
@@ -161,7 +161,7 @@ button.toast-close-button {
   background-color: #030303;
 }
 .toast-success {
-  background-color: #51A351;
+  background-color: #007bff;
 }
 .toast-error {
   background-color: #BD362F;
