--- a/public/css/index.css
+++ b/public/css/index.css
@@ -91,7 +91,7 @@ html, body {
 }
 
 .rounder-icon-password-input {
-	border-top-right-radius: 0.50rem !important; 
+	border-top-right-radius: 0.50rem !important;
 	border-bottom-right-radius: 0.50rem !important;
 }
 
@@ -156,9 +156,9 @@ html, body {
 /*VISTA CARRITO*/
 
 #img-carrito{
-	height: 470px; 
-	background-image: url('/public/img/banner2.jpg'); 
-	background-position: center; 
+	height: 470px;
+	background-image: url('/public/img/banner2.jpg');
+	background-position: center;
 	position: relative;
 }
 
@@ -172,15 +172,21 @@ html, body {
   background-color: rgba(0,0,0,0.8);
 }
 
+.negrita{
+	font-family: sans-serif !important;
+	font-weight: bold;
+	font-style: normal !important;
+}
+
 .filapadre{
-background: #ffffff;
+/*background: #ffffff;
 background: -moz-linear-gradient(left, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
 background: -webkit-gradient(left top, right top, color-stop(0%, #ffffff), color-stop(41%, #ffffff), color-stop(100%, #ebf4ff));
 background: -webkit-linear-gradient(left, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
 background: -o-linear-gradient(left, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
 background: -ms-linear-gradient(left, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
 background: linear-gradient(to right, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
-filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ebf4ff', GradientType=1 );
+filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', endColorstr='#ebf4ff', GradientType=1 );*/
 }
 
 .itempadre{
@@ -209,4 +215,3 @@ filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#ffffff', end
 			width: 100%;
 		}
 	}
-
