--- a/public/css/index.css
+++ b/public/css/index.css
@@ -178,6 +178,12 @@ html, body {
 	font-style: normal !important;
 }
 
+.simple{
+	font-family: sans-serif !important;
+	font-weight: normal !important;
+	font-style: normal !important;
+}
+
 .filapadre{
 /*background: #ffffff;
 background: -moz-linear-gradient(left, #ffffff 0%, #ffffff 41%, #ebf4ff 100%);
