--- a/public/css/index.css
+++ b/public/css/index.css
@@ -174,7 +174,7 @@ html, body {
 
 .negrita{
 	font-family: sans-serif !important;
-	font-weight: bold;
+	font-weight: bold !important;
 	font-style: normal !important;
 }
 
