--- a/public/css/index.css
+++ b/public/css/index.css
@@ -145,10 +145,11 @@ html, body {
 /*VISTA PRINCIPIAL*/
 
 #background-top{
-	background-image: url('../img/supermarket.jpg');
+	background-image: url('../img/banner1.png');
 	background-position: top center;
 	background-size: cover;
 	max-width: 100%;
+	/*max-height: 50%;*/
 	height: 35%;
 	margin-top: 4%;
 }
